--- a/index.html
+++ b/index.html
@@ -4,10 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/png" href="Favicon/Burger.png"/>
     <title>Food Network</title>
 </head>
 <body>
+
+    <!-- section 1 -->
+
+    <section class="main">
+        <div class="half-one">
+                <h1><span class="Orangecolor">Skip</span> The Diet,<br>
+                     Just Eat Healthy <br>
+                     With Food Network</h1>
+                <h3>Imagine you don't need a diet because we provide 
+                    healthy and delicious food for you</h3>
+                <a target="_blank" href="">Order Food</a>
+        </div>
+        <div class="half-one">
+            <img src="Img/img1..png" alt="">
+
+        </div>
+    </section>
+
+    <!-- Section 2 -->
     
 </body>
 </html>
