--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- section 1 -->
 
-    <section class="main">
+    <section class="one">
         <div class="half-one">
                 <h1><span class="Orangecolor">Skip</span> The Diet,<br>
                      Just Eat Healthy <br>
@@ -31,6 +31,22 @@
     </section>
 
     <!-- Section 2 -->
+
+
+    <section class="two">
+        <div class="half-one">
+            <img id="burgereat" src="Img/cook.png" alt="">
+
+        </div>
+        <div id="sec2-2nd" class="half-one">
+            <h1>About us</h1>
+            <h2>Skilled cook with 2+ years’ experience. 
+                Extensive knowledge of food industry and its relation to the day-to-day busy kitchen restaurant setting.
+                Very good attention to detail, both in cooking and inventory management. 
+                Effective at communicating with other staff, manager,<br> and chef during 60+ guest rush hour.</h2>
+            <a target="_blank" href="">Contact Us</a>
+        </div>
+    </section>
     
 </body>
 </html>
