--- a/index.html
+++ b/index.html
@@ -47,6 +47,50 @@
             <a target="_blank" href="">Contact Us</a>
         </div>
     </section>
+
+
+    <!-- section 3 -->
+
+
+    <section class="three">
+        <div>
+            <h1>Our Recipies</h1>
+            <p>Our recipies is world class.We are very much careful to our Customers.<br>
+                The best food in the town</p>
+        </div>
+    </section>
+
+
+    <!-- section 4 -->
+
+    <section class="four">
+        <div>
+            <img src="Img/Project Cover.jpg" alt="">
+            <h2>Breakfast</h2>
+            <p>Very much nutricious.Also very tasty,good for health.Enriched with many vitamins,Minerals,Protein</p>
+
+        </div>
+        <div>
+            <img id="lunch-photo" src="Img/Project Cover8.png" alt="">
+            <h2>Lunch</h2>
+            <p>Very much nutricious.Also very tasty,good for health.Enriched with many vitamins,Minerals,Protein</p>
+
+        </div>
+        <div>
+            <img src="Img/Project Cover.png" alt="">
+            <h2>Dinner</h2>
+            <p>Very much nutricious.Also very tasty,good for health.Enriched with many vitamins,Minerals,Protein</p>
+
+        </div>
+    </section>
+
+
+              <!-- footer -->
+     
+     <footer>
+         <h3> <span>Food</span><tab/> Network</h3>
+         <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+     </footer>         
     
 </body>
 </html>
